# oapi-rustgen

./: Cargo.toml  LICENSE  README.md
example-petstore/: Cargo.toml  build.rs
example-petstore/src/: client.rs  client_gen.rs  server.rs  server_gen.rs
oapi-rustgen/: Cargo.toml
oapi-rustgen/src/: analyzer.rs  client_writer.rs  lib.rs  pointer.rs  renamer.rs  server_writer.rs  types_writer.rs
oapi-rustgen/src/spec/: components.rs  example.rs  header.rs  media_type.rs  mod.rs  parameter.rs  ref.rs  request_body.rs  response.rs  schema.rs  security_scheme.rs
