[package]
name = "example-petstore"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/server.rs"

[dependencies]
actix-rt = "2"
actix-web = "4"
async-trait = "0.1"
awc = "3"
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

[build-dependencies]
oapi-rustgen = { path = "../oapi-rustgen" }
rustfmt-wrapper = "0.2.0"
