[package]
name = "oapi-rustgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case = "0.6"
derive_more = "0.99"
genco = "0.17"
http = "0.2"
jsonptr = "0.4"
log = "0.4"
once_cell = "1"
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
syn = "2"
url = { version = "2", features = ["serde"] }